# drone-cpp

./: .gitignore  README.md  compare_endurance.py  compare_methods.py  compare_methods_edges.py  main.tex  presentation.tex  pyproject.toml  pytest.ini  requirements.txt  solve_and_plot.py  solve_heuristic.py  sweep_endurance.py
.github/workflows/: tests.yml
articulo/: implemented_model.tex  instance_params.txt  main.tex  mybib.bib  presentation.tex  second_version.tex
articulo/tables/: table_binary_variables.tex  table_binary_variables_new.tex  table_continuous_variables.tex
drone_cpp/: __init__.py  config.py  data_structures.py  heuristic.py  instance_generator.py  main.py  model.py  visualization.py
drone_cpp/models/: __init__.py  base.py  mip_edges.py  mip_rings.py  mip_v1.py
sweep_results/: end_060_data.json  end_070_data.json  end_080_data.json  end_090_data.json  end_100_data.json  end_120_data.json
tables/: table_binary_variables.tex
tests/: conftest.py  test_data_structures.py  test_edge_model.py  test_instance_generator.py  test_model.py  test_scripts.py  test_smoke.py  test_visualization.py
