[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "drone-cpp"
dynamic = ["version"]
description = "Mixed-Integer Programming for Drone Coverage Path Planning"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests requiring Gurobi (deselect with '-m \"not slow\"')",
]
